# MGARD

./: CMakeLists.txt
examples/progressive/: CMakeLists.txt  test_reconstructor.cpp  test_refactor.cpp
include/progressive/ErrorEstimator/: MaxErrorEstimator.hpp
src/mgard-x/HighLevelAPI/CUDA/: CMakeLists.txt
